MODOAIPMH-661 Fixed cql GetRecord